2004-11-17  Manish Singh  <yosh@gimp.org>

	* plug-ins/dbbrowser/Makefile.am: make libgimpprocbrowser a libtooled
	library.

	* plug-ins/dbbrowser/gimpprocbrowser.[ch]: add a user_data pointer
	for GimpProcBrowserApplyCallback.

	* plug-ins/dbbrowser/gimpprocbrowser.c: only convert the name to
	scheme style if scheme_names in the proc info pane too.

	* plug-ins/dbbrowser/procedure-browser.c
	* plug-ins/script-fu/script-fu-console.c: pass NULL as user_data.

	* plug-ins/script-fu/Makefile.am: reference libgimpprocbrowser.la.

	* plug-ins/pygimp/Makefile.am
	* plug-ins/pygimp/procbrowser.c: new module, which wraps
	libgimprocbrowser.

	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp.h
	* plug-ins/pygimp/pygimp-pdb.c: export GimpPDBFunction so other
	modules can use it.

	* plug-ins/pygimp/plug-ins/pdbbrowse.py
	* plug-ins/pygimp/plug-ins/gimpcons.py: use gimpprocbrowser.

2004-11-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-interface.c: added a utility
	function to reduce code duplication.

2004-11-17  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/script-fu-scripts.[ch]
	* plug-ins/script-fu/siod-wrapper.c: appled patch from Kevin
	Cozens which adds (script-fu-menu-register) and allows scripts to
	register their menu_paths the same undeprecated way as plug-ins.
	Fixes bug #158117.

	* plug-ins/script-fu/scripts/test-sphere.scm: example how to use
	the new API. Doesn't change strings because test-shpere.scm is an
	untranslated example script.

2004-11-17  Michael Natterer  <mitch@gimp.org>

	Made plug-in menu registration work the same way for ordinary and
	temporary procedures. Addresses bug #158117.

	* app/core/gimp-gui.[ch]: added "const gchar *menu_path" to
	gimp_menus_create_entry().

	* app/gui/gui-vtable.c (gui_menus_create_entry): if menu_path is
	NULL, behave as before and create an action and its menu entries
	for all the procedure's menu_paths. If it is non-NULL, skip action